--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+alembic==1.13.1
 blinker==1.6.3
 boto==2.49.0
 click==8.1.7
 Flask==3.0.0
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.3
 MarkupSafe==2.1.3
 Pillow==10.1.0
 psycopg2-binary==2.9.9
+SQLAlchemy==2.0.29
+typing_extensions==4.11.0
 Werkzeug==3.0.1
