--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.1
 attrs==23.1.0
 blinker==1.6.3
 boto==2.49.0
+bottle==0.12.25
 brother-ql==0.9.4
 bytecode==0.15.1
 cattrs==23.2.3
@@ -20,17 +21,22 @@ Jinja2==3.1.2
 JSON-log-formatter==1.0
 Mako==1.3.3
 MarkupSafe==2.1.3
+numpy==2.1.3
 opentelemetry-api==1.25.0
 packbits==0.6
-Pillow==10.1.0
+pandas==2.2.3
+Pillow==9.5.0
 protobuf==5.27.2
 psycopg2-binary==2.9.9
 pypng==0.20220715.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
 pyusb==1.2.1
 qrcode==7.4.2
 six==1.16.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
+tzdata==2024.2
 Werkzeug==3.0.1
 wrapt==1.16.0
 xmltodict==0.13.0
